<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lohoyinttr"

    android:orientation="vertical">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />
    <LinearLayout
        android:id="@+id/lifirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/rectbackgra"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/opImage"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/customer_support" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_28sdp"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="Dr. John Riley"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/specialities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="service_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/qualification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="service_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/qualification"
                        android:drawableTint="@color/light_grey"
                        android:fontFamily="@font/proximanovaregular"
                        android:gravity="left|top"
                        android:maxLines="3"
                        android:text="Lorem "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/rectbackgra"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:visibility="visible">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PatientName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Patient Name"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PatientMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/patient_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Patientage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/patient_age"
                android:maxLength="2"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date_and_time"
            android:textColor="@color/black"></TextView>

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="11 jan 2017 02:45 AM"
            android:textColor="@color/black"
            android:textStyle="bold"></TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selectdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="Appointment Date"
                android:text="Select Date"
                android:cursorVisible="false"
                android:focusable="false"
                android:textAlignment="center"
                android:drawableStart="@drawable/calendar_today"

                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/rectbackgra"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linergendergroup"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/black"></TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
              android:id="@+id/radiogroup"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
            <RadioButton
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Patientsymptom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/patient_sympton"
                android:gravity="top"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Patientweight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="Weight (Optional)"
                android:gravity="top"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Patientheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="Height (Optional)"
                android:gravity="top"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PatientBP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="B.P (Optional)"
                android:gravity="top"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PatientSuger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="Blood Sugar (Optional)"
                android:gravity="top"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Clientemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/patient_email"
            android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_report_optional"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/attach_file"
            android:text="@string/send_report"
            android:layout_margin="@dimen/_10sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/rectnew"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            android:id="@+id/imagereport"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rev_photo"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/bookingterm"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:visibility="visible">

        <Button
            android:id="@+id/submit"
            style="@android:style/Widget.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@drawable/rectnew"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/proximanovaregular"
            android:gravity="center"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>